--- a/src/EncontroDeLutadores.API/appsettings.json
+++ b/src/EncontroDeLutadores.API/appsettings.json
@@ -14,5 +14,13 @@
     "Emissor": "EncontroLutadores",
     "ValidoEm": "https://localhost:7059/api/"
   },
+  "ConfigurationMAILTrap": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 2525,
+    "UserName": "e00a97119c1ca7",
+    "Password": "7b1f3ec6155100",
+    "EnableSSL": true
+  },
+  "URLFronEnd": "http://172.17.16.1:3000/",
   "AllowedHosts": "*"
 }
