[add] RabbitMQ and MongoDB

--- a/src/EncontroDeLutadores.API/EncontroDeLutadores.API.csproj
+++ b/src/EncontroDeLutadores.API/EncontroDeLutadores.API.csproj
@@ -17,6 +17,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
@@ -24,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\EncontroDeLutadores.Aplicacao\EncontroDeLutadores.Aplicacao.csproj" />
     <ProjectReference Include="..\EncontroDeLutadores.Dominio\EncontroDeLutadores.Dominio.csproj" />
+    <ProjectReference Include="..\EncontroDeLutadores.Infra.RabbitMQ\EncontroDeLutadores.Infra.RabbitMQ.csproj" />
     <ProjectReference Include="..\EncontroDeLutadores.Infra\EncontroDeLutadores.Infra.csproj" />
     <ProjectReference Include="..\EncontroDeLutadores.Servico\EncontroDeLutadores.Servico.csproj" />
   </ItemGroup>
