--- a/src/EncontroDeLutadores.API/appsettings.json
+++ b/src/EncontroDeLutadores.API/appsettings.json
@@ -21,6 +21,18 @@
     "Password": "7b1f3ec6155100",
     "EnableSSL": true
   },
+  "ConnectionStringsRabbitMQ": {
+    "userName": "guess",
+    "password": "guess",
+    "VirtualHost": "vhost;",
+    "HostName": "hostName;"
+  },
+
+  "MongoDBSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ClubeDaLuta"
+
+  },
   "URLFronEnd": "http://172.17.16.1:3000/",
   "AllowedHosts": "*"
 }
