--- a/src/EncontroDeLutadores.Infra/EncontroDeLutadores.Infra.csproj
+++ b/src/EncontroDeLutadores.Infra/EncontroDeLutadores.Infra.csproj
@@ -17,11 +17,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MongoDB.Driver" Version="3.0.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\EncontroDeLutadores.Dominio\EncontroDeLutadores.Dominio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositorio\MongoDB\PerfiLutador\" />
   </ItemGroup>
 
 </Project>
