--- a/src/EncontroDeLutadores.Infra.RabbitMQ/EncontroDeLutadores.Infra.RabbitMQ.csproj
+++ b/src/EncontroDeLutadores.Infra.RabbitMQ/EncontroDeLutadores.Infra.RabbitMQ.csproj
@@ -7,12 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.1" />
-    <PackageReference Include="MongoDB.Bson" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entidades\NotificacaoError\" />
+    <ProjectReference Include="..\EncontroDeLutadores.Servico\EncontroDeLutadores.Servico.csproj" />
   </ItemGroup>
 
 </Project>
