--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 # ASP.NET Core
+- task: DockerCompose@1
+  inputs:
+    containerregistrytype: 'Azure Container Registry'
+    azureSubscription: 'Azure subscription 1(235bc594-5ba0-4b47-8523-bf987f434f0e)'
+    azureContainerRegistry: '{"loginServer":"testeacr.azurecr.io", "id" : "/subscriptions/235bc594-5ba0-4b47-8523-bf987f434f0e/resourceGroups/serrasystems/providers/Microsoft.ContainerRegistry/registries/testeacr"}'
+    dockerComposeFile: '**/docker-compose.yml'
+    action: 'Run a Docker Compose command'
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
