--- a/src/EncontroDeLutadores.Testes.API.Integracao/EncontroDeLutadores.Testes.API.Integracao.csproj
+++ b/src/EncontroDeLutadores.Testes.API.Integracao/EncontroDeLutadores.Testes.API.Integracao.csproj
@@ -11,9 +11,15 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EncontroDeLutadores.Infra\EncontroDeLutadores.Infra.csproj" />
   </ItemGroup>
 
   <ItemGroup>
