--- a/src/EncontroDeLutadores.Testes.API.Integracao/EncontroDeLutadores.Testes.API.Integracao.csproj
+++ b/src/EncontroDeLutadores.Testes.API.Integracao/EncontroDeLutadores.Testes.API.Integracao.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.collector" Version="3.2.0" />
+	  <PackageReference Include="coverlet.collector" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EncontroDeLutadores.API\EncontroDeLutadores.API.csproj" />
     <ProjectReference Include="..\EncontroDeLutadores.Infra\EncontroDeLutadores.Infra.csproj" />
   </ItemGroup>
 
