--- a/src/EncontroDeLutadores.API/appsettings.json
+++ b/src/EncontroDeLutadores.API/appsettings.json
@@ -6,7 +6,7 @@
     } 
   },
   "ConnectionStrings": {
-    "Connection": "User ID=postgres;Password=123456789;Host=localhost;Port=5432;Database=EncontroDeLutadores;Pooling=true;"
+    "Connection": "User ID=sa;Password=123456789;Host=localhost;Port=5432;Database=clubedaluta;Pooling=true;"
   },
   "AppSetting": {
     "Segredo": "aaffafa5d7b7470782f21c64d4945f9b",
