--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "app-leandroserra.azurewebsites.net" # Substitua pelo nome do App Service no Azure
+          app-name: "app-leandroserra" # Substitua pelo nome do App Service no Azure
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: ./publish_output
