--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to Azure App Service
 on:
   push:
     branches:
-      - build_vm_docker_image
+      - master
 
 jobs:
   build-and-deploy:
@@ -18,7 +18,7 @@ jobs:
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '7.0.x' # Altere para a versão do seu projeto
+          dotnet-version: '6.0.x' # Altere para a versão do seu projeto
 
       # 3. Restaurar dependências
       - name: Restore Dependencies
@@ -36,6 +36,6 @@ jobs:
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v2
         with:
-          app-name: "app-leandroserra-api" # Substitua pelo nome do App Service no Azure
+          app-name: "app-leandroserra" # Substitua pelo nome do App Service no Azure
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: ./publish_output
